--- a/new-space-systems/src/components/header/header.sass
+++ b/new-space-systems/src/components/header/header.sass
@@ -16,11 +16,13 @@ div.header
         left: 100px
         bottom: 78px
         width: 559px
-        font-size: 64px
         text-align: left
-        color: $light-white
-        font-weight: 700
-        line-height: 87.42px
+        font-family: 'Avenir'
+        font-style: normal
+        font-weight: 900
+        font-size: 64px
+        line-height: 87px
+        color: #FEFEFE
         +xlMaxBreakPoint
             top: 110px
             bottom: auto
@@ -66,7 +68,7 @@ div.header
             .arrow
                 +bg-image(9px, 18px, '../../assets/Arrow-down-white.svg')
     div.signUp
-        top: calc(50%-30px)
+        top: calc(50% - 30px)
         left: auto
         right: 100px
         transform: translateY(-50%)
