--- a/new-space-systems/src/components/productCarousel/productCarousel.sass
+++ b/new-space-systems/src/components/productCarousel/productCarousel.sass
@@ -67,7 +67,7 @@
                 font-weight: 900
                 font-size: 36px
                 line-height: 49px
-                color: $black
+                letter-spacing: -0.011em
               .description
                 font-family: 'Avenir'
                 font-style: normal
