--- a/new-space-systems/src/components/signUp/signUp.sass
+++ b/new-space-systems/src/components/signUp/signUp.sass
@@ -49,12 +49,13 @@ div.signUp
             margin: 15px 0
             width: auto
         p.note
+            font-family: 'Avenir'
+            font-style: normal
+            font-weight: 300
             font-size: 14px
-            line-height: 20.49px
-            color: $dark-grey
-            padding: 0
+            line-height: 19px
             letter-spacing: -0.022em
-            font-weight: 100
+            color: #898787
             span
                 text-decoration: underline
                 cursor: pointer
