Add responsive styles.

--- a/new-space-systems/src/components/App/app.css
+++ b/new-space-systems/src/components/App/app.css
@@ -3,8 +3,6 @@ div.app {
   display: flex;
   flex-direction: column;
   background-color: #FBFBFB;
-  color: $black;
+  color: #3A3A3A;
   overflow: hidden;
-}
-
-/*# sourceMappingURL=app.css.map */
+}/*# sourceMappingURL=app.css.map */
