--- a/new-space-systems/src/components/joinBtn/joinBtn.sass
+++ b/new-space-systems/src/components/joinBtn/joinBtn.sass
@@ -11,5 +11,8 @@ button.joinBtn
     background: #FFD232
     border-radius: 80px
     border: none
+
+    +smMaxBreakPoint
+        width: 135px
     &:hover
         background-color: $light-yellow
