--- a/new-space-systems/src/styles/_mixins.sass
+++ b/new-space-systems/src/styles/_mixins.sass
@@ -14,13 +14,13 @@
     border: 1px solid $grey
     border-radius: $border-radius
 
-=bg-image($height, $width, $url, $size: contain)
+=bg-image($height, $width, $url, $size: contain, $position: center)
     height: $height
     width: $width
     background-image: url($url)
     background-repeat: no-repeat
     background-size: $size
-    background-position: center
+    background-position: $position
 
 =center
     position: absolute
