--- a/new-space-systems/src/components/joinBtn/joinBtn.css
+++ b/new-space-systems/src/components/joinBtn/joinBtn.css
@@ -10,6 +10,11 @@ button.joinBtn {
   border-radius: 80px;
   border: none;
 }
+@media (max-width: 420px) {
+  button.joinBtn {
+    width: 135px;
+  }
+}
 button.joinBtn:hover {
   background-color: #FFF6C4;
 }/*# sourceMappingURL=joinBtn.css.map */
