--- a/new-space-systems/src/components/letsGetInTouch/LetsGetInTouch.css
+++ b/new-space-systems/src/components/letsGetInTouch/LetsGetInTouch.css
@@ -3,10 +3,20 @@
   width: 100%;
   height: 568px;
 }
+@media (max-width: 420px) {
+  .lets-get-in-touch {
+    height: auto;
+  }
+}
 .lets-get-in-touch .image-container {
   width: 50%;
   overflow: hidden;
   position: relative;
+}
+@media (max-width: 420px) {
+  .lets-get-in-touch .image-container {
+    display: none;
+  }
 }
 .lets-get-in-touch .image-container img {
   position: absolute;
@@ -21,8 +31,20 @@
   height: 100%;
   padding: 69px 0 50px 112px;
 }
+@media (max-width: 420px) {
+  .lets-get-in-touch .text-section-container {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 0 25px 60px 25px;
+  }
+}
 .lets-get-in-touch .text-section-container .text-section {
   width: 375px;
+}
+@media (max-width: 420px) {
+  .lets-get-in-touch .text-section-container .text-section {
+    width: 325px;
+  }
 }
 .lets-get-in-touch .text-section-container .text-section h2 {
   text-align: center;
@@ -32,6 +54,14 @@
   font-size: 36px;
   line-height: 49px;
   color: #3A3A3A;
+}
+@media (max-width: 420px) {
+  .lets-get-in-touch .text-section-container .text-section h2 {
+    font-size: 30px;
+    line-height: 41px;
+    text-align: center;
+    letter-spacing: -0.011em;
+  }
 }
 .lets-get-in-touch .text-section-container .text-section p {
   text-align: left;
@@ -43,8 +73,20 @@
   letter-spacing: -0.022em;
   margin-bottom: 22px;
 }
+@media (max-width: 420px) {
+  .lets-get-in-touch .text-section-container .text-section p {
+    display: none;
+  }
+}
 .lets-get-in-touch .text-section-container .text-section .ceo-section {
   display: flex;
+}
+@media (max-width: 420px) {
+  .lets-get-in-touch .text-section-container .text-section .ceo-section {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
 .lets-get-in-touch .text-section-container .text-section .ceo-section .ceo-image-container {
   width: 160px;
@@ -58,6 +100,11 @@
   text-align: center;
   padding-left: 30px;
   margin-top: 40px;
+}
+@media (max-width: 420px) {
+  .lets-get-in-touch .text-section-container .text-section .ceo-section .ceo-information {
+    margin-top: 30px;
+  }
 }
 .lets-get-in-touch .text-section-container .text-section .ceo-section .ceo-information .ceo-name {
   font-family: "Avenir";
@@ -76,6 +123,11 @@
   line-height: 20px;
   color: #3A3A3A;
   margin-bottom: 10px;
+}
+@media (max-width: 420px) {
+  .lets-get-in-touch .text-section-container .text-section .ceo-section .ceo-information .ceo-title {
+    margin-bottom: 30px;
+  }
 }
 .lets-get-in-touch .text-section-container .text-section .ceo-section .ceo-information .social-icons {
   height: 24px;
@@ -98,6 +150,12 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 22px;
+}
+@media (max-width: 420px) {
+  .lets-get-in-touch .text-section-container .text-section a.send-message {
+    width: 325px;
+    margin-top: 30px;
+  }
 }
 .lets-get-in-touch .text-section-container .text-section a.send-message img {
   margin-right: 23.5px;
