--- a/new-space-systems/src/components/letsGetInTouch/LetsGetInTouch.sass
+++ b/new-space-systems/src/components/letsGetInTouch/LetsGetInTouch.sass
@@ -4,10 +4,14 @@
   display: flex
   width: 100%
   height: 568px
+  +smMaxBreakPoint
+    height: auto
   .image-container
     width: 50%
     overflow: hidden
     position: relative
+    +smMaxBreakPoint
+      display: none
     img
       position: absolute
       top: 50%
@@ -20,8 +24,14 @@
     width: 50%
     height: 100%
     padding: 69px 0 50px 112px
+    +smMaxBreakPoint
+      width: 100%
+      box-sizing: border-box
+      padding: 0 25px 60px 25px
     .text-section
       width: 375px
+      +smMaxBreakPoint
+        width: 325px
       h2
         text-align: center
         font-family: 'Avenir'
@@ -30,6 +40,11 @@
         font-size: 36px
         line-height: 49px
         color: $black
+        +smMaxBreakPoint
+          font-size: 30px
+          line-height: 41px
+          text-align: center
+          letter-spacing: -0.011em
       p
         text-align: left
         font-family: 'Avenir'
@@ -39,8 +54,14 @@
         line-height: 22px
         letter-spacing: -0.022em
         margin-bottom: 22px
+        +smMaxBreakPoint
+          display: none
       .ceo-section
         display: flex
+        +smMaxBreakPoint
+          flex-direction: column
+          justify-content: center
+          align-items: center
         .ceo-image-container
           width: 160px
           height: 160px
@@ -52,6 +73,8 @@
           text-align: center
           padding-left: 30px
           margin-top: 40px
+          +smMaxBreakPoint
+            margin-top: 30px
           .ceo-name
             font-family: 'Avenir'
             font-style: normal
@@ -68,6 +91,8 @@
             line-height: 20px
             color: $black
             margin-bottom: 10px
+            +smMaxBreakPoint
+              margin-bottom: 30px
           .social-icons
             height: 24px
             img
@@ -87,5 +112,8 @@
         font-weight: 500
         font-size: 16px
         line-height: 22px
+        +smMaxBreakPoint
+          width: 325px
+          margin-top: 30px
         img
           margin-right: 23.5px
