--- a/new-space-systems/src/components/productCarousel/productCarousel.css
+++ b/new-space-systems/src/components/productCarousel/productCarousel.css
@@ -4,6 +4,13 @@
   background-color: #F3F2EE;
   padding: 60px 100px;
 }
+@media (max-width: 420px) {
+  .product-carousel-root {
+    box-sizing: border-box;
+    padding: 60px 25px;
+    width: 100%;
+  }
+}
 .product-carousel-root h2 {
   text-align: left;
   font-family: "Avenir";
@@ -12,9 +19,21 @@
   font-size: 48px;
   line-height: 66px;
 }
+@media (max-width: 420px) {
+  .product-carousel-root h2 {
+    font-size: 36px;
+    line-height: 49px;
+    color: #847FFB;
+  }
+}
 .product-carousel-root .BrainhubCarousel__container {
   width: 100%;
   height: 588px;
+}
+@media (max-width: 420px) {
+  .product-carousel-root .BrainhubCarousel__container {
+    height: 606px;
+  }
 }
 .product-carousel-root .BrainhubCarousel__container .BrainhubCarousel {
   width: 100%;
@@ -54,8 +73,19 @@
   margin-right: 20px;
   display: block;
 }
+@media (max-width: 420px) {
+  .product-carousel-root .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track .BrainhubCarouselItem {
+    width: 325px;
+    height: 604px;
+  }
+}
 .product-carousel-root .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track .BrainhubCarouselItem .category {
   height: 586px;
+}
+@media (max-width: 420px) {
+  .product-carousel-root .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track .BrainhubCarouselItem .category {
+    height: 604px;
+  }
 }
 .product-carousel-root .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track .BrainhubCarouselItem .picture-container {
   border-radius: 10px 10px 0 0;
@@ -63,14 +93,33 @@
   height: 400px;
   overflow: hidden;
 }
+@media (max-width: 420px) {
+  .product-carousel-root .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track .BrainhubCarouselItem .picture-container {
+    width: 325px;
+    position: relative;
+  }
+}
 .product-carousel-root .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track .BrainhubCarouselItem .picture-container img {
   width: 100%;
-  height: auto;
+  height: 100%;
+}
+@media (max-width: 420px) {
+  .product-carousel-root .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track .BrainhubCarouselItem .picture-container img {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
 .product-carousel-root .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track .BrainhubCarouselItem .bottom-section {
   padding: 24px 28px;
   text-align: left;
   border-radius: 0 0 10px 10px;
+}
+@media (max-width: 420px) {
+  .product-carousel-root .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track .BrainhubCarouselItem .bottom-section {
+    height: 206px;
+  }
 }
 .product-carousel-root .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track .BrainhubCarouselItem .bottom-section .title {
   margin-bottom: 10px;
@@ -81,6 +130,12 @@
   line-height: 49px;
   letter-spacing: -0.011em;
 }
+@media (max-width: 420px) {
+  .product-carousel-root .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track .BrainhubCarouselItem .bottom-section .title {
+    font-size: 30px;
+    line-height: 41px;
+  }
+}
 .product-carousel-root .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track .BrainhubCarouselItem .bottom-section .description {
   font-family: "Avenir";
   font-style: normal;
@@ -89,4 +144,11 @@
   line-height: 27px;
   letter-spacing: -0.022em;
   color: #3A3A3A;
+}
+@media (max-width: 420px) {
+  .product-carousel-root .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track .BrainhubCarouselItem .bottom-section .description {
+    font-size: 16px;
+    line-height: 22px;
+    letter-spacing: -0.011em;
+  }
 }/*# sourceMappingURL=productCarousel.css.map */
