--- a/new-space-systems/src/components/recognisedBy/recognisedBy.css
+++ b/new-space-systems/src/components/recognisedBy/recognisedBy.css
@@ -4,6 +4,12 @@
   padding: 18px 100px;
   background: #FBFBFB;
 }
+@media (max-width: 420px) {
+  .recognised-by {
+    padding: 0;
+    height: 427px;
+  }
+}
 .recognised-by h2 {
   text-align: left;
   font-family: "Avenir";
@@ -13,16 +19,36 @@
   line-height: 33px;
   color: #3A3A3A;
 }
+@media (max-width: 420px) {
+  .recognised-by h2 {
+    text-align: center;
+    margin: 50px 0 24px;
+  }
+}
 .recognised-by .recognised-by-columns {
   width: 100%;
   display: flex;
   justify-content: space-between;
+}
+@media (max-width: 420px) {
+  .recognised-by .recognised-by-columns {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
 .recognised-by .recognised-by-columns .recognised-by-column {
   flex-grow: 1;
   height: 32px;
   padding: 24px;
   position: relative;
+}
+@media (max-width: 420px) {
+  .recognised-by .recognised-by-columns .recognised-by-column {
+    width: 50%;
+    flex-grow: unset;
+    box-sizing: border-box;
+    margin: 40px 0;
+  }
 }
 .recognised-by .recognised-by-columns .recognised-by-column img {
   position: absolute;
