--- a/new-space-systems/src/components/recognisedBy/recognisedBy.sass
+++ b/new-space-systems/src/components/recognisedBy/recognisedBy.sass
@@ -5,6 +5,9 @@
   height: 183px
   padding: 18px 100px
   background: $white
+  +smMaxBreakPoint
+    padding: 0
+    height: 427px
   h2
     text-align: left
     font-family: 'Avenir'
@@ -13,15 +16,26 @@
     font-size: 24px
     line-height: 33px
     color: $black
+    +smMaxBreakPoint
+      text-align: center
+      margin: 50px 0 24px
   .recognised-by-columns
     width: 100%
     display: flex
     justify-content: space-between
+    +smMaxBreakPoint
+      flex-wrap: wrap
+      justify-content: center
     .recognised-by-column
       flex-grow: 1
       height: 32px
       padding: 24px
       position: relative
+      +smMaxBreakPoint
+        width: 50%
+        flex-grow: unset
+        box-sizing: border-box
+        margin: 40px 0
       img
         position: absolute
         top: 50%
