--- a/new-space-systems/src/components/signUp/signUp.css
+++ b/new-space-systems/src/components/signUp/signUp.css
@@ -13,6 +13,11 @@ div.signUp {
   left: 0;
   text-align: left;
 }
+@media (max-width: 420px) {
+  div.signUp {
+    padding: 45px 25px;
+  }
+}
 div.signUp .state {
   display: flex;
   flex-direction: column;
@@ -36,13 +41,22 @@ div.signUp .state h2.title {
   font-weight: 900;
   line-height: 49.18px;
 }
-div.signUp .state h2.title.success {
-  text-align: center;
+@media (max-width: 420px) {
+  div.signUp .state h2.title {
+    text-align: left;
+    font-size: 30px;
+    line-height: 41px;
+  }
 }
 div.signUp .state p.description {
   margin: 0;
   line-height: 22px;
   padding: 0 10px 30px 0;
+}
+@media (max-width: 420px) {
+  div.signUp .state p.description {
+    font-size: 16px;
+  }
 }
 div.signUp .state label {
   display: flex;
@@ -52,14 +66,19 @@ div.signUp .state label {
   padding: 0px 0px 0px 22px;
   margin-bottom: 30px;
   gap: 10px;
-  width: 376px;
   height: 45px;
   background: #FEFEFE;
   border: 1px solid #BBBBBB;
   border-radius: 62px;
 }
+@media (max-width: 420px) {
+  div.signUp .state label {
+    box-sizing: border-box;
+    width: 325px;
+  }
+}
 div.signUp .state label input {
-  width: 165px;
+  width: 100%;
   border: none;
   padding: 4px 0 0 0;
   background: transparent;
@@ -71,6 +90,11 @@ div.signUp .state label span {
 div.signUp .state button.joinBtn {
   margin: 15px 0;
   width: auto;
+}
+@media (max-width: 420px) {
+  div.signUp .state button.joinBtn {
+    width: 122px;
+  }
 }
 div.signUp .state p.note {
   font-family: "Avenir";
