--- a/new-space-systems/src/components/testimonials/testimonials.css
+++ b/new-space-systems/src/components/testimonials/testimonials.css
@@ -3,6 +3,11 @@
   width: 100%;
   padding: 90px 0;
 }
+@media (max-width: 420px) {
+  .testimonials {
+    padding: 0;
+  }
+}
 .testimonials h2 {
   margin-left: 100px;
   font-family: "Avenir";
@@ -12,6 +17,15 @@
   line-height: 66px;
   text-align: left;
   color: #2D299B;
+}
+@media (max-width: 420px) {
+  .testimonials h2 {
+    margin: 0;
+    padding: 60px 25px;
+    font-size: 36px;
+    line-height: 49px;
+    letter-spacing: -0.011em;
+  }
 }
 .testimonials .BrainhubCarousel__container {
   width: 100%;
@@ -43,6 +57,12 @@
   height: 100%;
   overflow: hidden;
 }
+@media (max-width: 420px) {
+  .testimonials .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer {
+    width: 100%;
+    margin: 0;
+  }
+}
 .testimonials .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track {
   display: flex;
   flex-gap: 24px;
@@ -66,6 +86,11 @@
   overflow: hidden;
   position: relative;
 }
+@media (max-width: 420px) {
+  .testimonials .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track .BrainhubCarouselItem .testimonial .picture-container {
+    width: 325px;
+  }
+}
 .testimonials .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track .BrainhubCarouselItem .testimonial .picture-container img {
   width: 100%;
   height: auto;
@@ -73,6 +98,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  height: 100%;
+  width: auto;
 }
 .testimonials .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track .BrainhubCarouselItem .testimonial .bottom-section {
   box-sizing: border-box;
@@ -85,7 +112,13 @@
   flex-direction: column;
   justify-content: space-between;
 }
+@media (max-width: 420px) {
+  .testimonials .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track .BrainhubCarouselItem .testimonial .bottom-section {
+    width: 325px;
+  }
+}
 .testimonials .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track .BrainhubCarouselItem .testimonial .bottom-section .description {
+  width: 100%;
   font-family: "Avenir";
   font-style: normal;
   font-weight: 500;
