--- a/new-space-systems/src/components/testimonials/testimonials.sass
+++ b/new-space-systems/src/components/testimonials/testimonials.sass
@@ -4,6 +4,8 @@
   height: 920px
   width: 100%
   padding: 90px 0
+  +smMaxBreakPoint
+    padding: 0
   h2
     margin-left: 100px
     font-family: 'Avenir'
@@ -13,6 +15,12 @@
     line-height: 66px
     text-align: left
     color: #2D299B
+    +smMaxBreakPoint
+      margin: 0
+      padding: 60px 25px
+      font-size: 36px
+      line-height: 49px
+      letter-spacing: -0.011em
   .BrainhubCarousel__container
     width: 100%
     height: 700px
@@ -37,6 +45,9 @@
         width: calc(100% - 200px)
         height: 100%
         overflow: hidden
+        +smMaxBreakPoint
+          width: 100%
+          margin: 0
         .BrainhubCarousel__track
           display: flex
           flex-gap: 24px
@@ -56,6 +67,8 @@
                 height: 365px
                 overflow: hidden
                 position: relative
+                +smMaxBreakPoint
+                  width: 325px
                 img
                   width: 100%
                   height: auto
@@ -63,6 +76,9 @@
                   top: 50%
                   left: 50%
                   transform: translate(-50%,-50%)
+                  +smMaxBreakPoint
+                  height: 100%
+                  width: auto
 
               .bottom-section
                 box-sizing: border-box
@@ -74,7 +90,10 @@
                 display: flex
                 flex-direction: column
                 justify-content: space-between
+                +smMaxBreakPoint
+                  width: 325px
                 .description
+                  width: 100%
                   font-family: 'Avenir'
                   font-style: normal
                   font-weight: 500
