--- a/new-space-systems/src/components/header/header.css
+++ b/new-space-systems/src/components/header/header.css
@@ -10,7 +10,7 @@ div.header {
 }
 @media (max-width: 420px) {
   div.header {
-    height: "1005px";
+    height: 98vh;
     width: 100%;
     background-image: url("../../assets/mobile-header.webp");
     background-repeat: no-repeat;
@@ -99,6 +99,12 @@ div.header div.signUp {
 @media (max-width: 420px) {
   div.header div.signUp {
     left: 0;
+    top: auto;
+    bottom: 0;
+    box-sizing: border-box;
+    transform: translateY(0);
+    width: 100%;
+    border-radius: 10px 10px 0 0;
   }
 }
 div.header div.signUp h2.title {
