--- a/new-space-systems/src/components/productCarousel/productCarousel.sass
+++ b/new-space-systems/src/components/productCarousel/productCarousel.sass
@@ -1,6 +1,8 @@
 @import '../../styles/_mixins.sass'
+@import 'categoriesCarouselDesktop/_categoriesCarouselDesktop'
+@import 'categoriesCarouselMobile/_categoriesCarouselMobile'
 
-.product-carousel-root
+.product-categories
   width: calc(100% - 200px)
   height: 996px
   background-color: #F3F2EE
@@ -9,104 +11,16 @@
     box-sizing: border-box
     padding: 60px 25px
     width: 100%
-  h2
-    text-align: left
-    font-family: 'Avenir'
-    font-style: normal
-    font-weight: 900
-    font-size: 48px
-    line-height: 66px
-    +smMaxBreakPoint
-      font-size: 36px
-      line-height: 49px
-      color: #847FFB
-      // +customMinBreakPoint(1000)
-  .BrainhubCarousel__container
-    width: 100%
-    height: 588px
-    +smMaxBreakPoint
-      height: 606px
-    .BrainhubCarousel
-      width: 100%
-      height: 100%
-      position: relative
-      .BrainhubCarousel__arrows
-        position: absolute
-        z-index: 2
-        top: 50%
-        background-color: $black
-        border-radius: 50%
-      .BrainhubCarousel__arrowLeft
-        left: 32px
-        right: auto
-      .BrainhubCarousel__arrowRight
-        right: 32px
-        left: auto
-      .BrainhubCarousel__trackContainer
-        width: 100%
-        height: 100%
-        overflow: hidden
-        .BrainhubCarousel__track
-          display: flex
-          flex-gap: 24px
-          .BrainhubCarouselItem
-            width: 510px
-            height: 586px
-            border: 1px solid #BBBBBB
-            border-radius: 10px
-            background-color: #fff
-            margin-right: 20px
-            display: block
-            +smMaxBreakPoint
-              width: 325px
-              height: 604px
-            .category
-              height: 586px
-              +smMaxBreakPoint
-                height: 604px
-            .picture-container
-              border-radius: 10px 10px 0 0
-              width: 510px
-              height: 400px
-              overflow: hidden
-              +smMaxBreakPoint
-                width: 325px
-                position: relative
-              img
-                width: 100%
-                height: 100%
-                +smMaxBreakPoint
-                  position: absolute
-                  left: 50%
-                  top: 50%
-                  transform: translate(-50%,-50%)
-            .bottom-section
-              padding: 24px 28px
-              text-align: left
-              border-radius: 0 0 10px 10px
-              +smMaxBreakPoint
-                height: 206px
-              .title
-                margin-bottom: 10px
-                font-family: 'Avenir'
-                font-style: normal
-                font-weight: 900
-                font-size: 36px
-                line-height: 49px
-                letter-spacing: -0.011em
-                +smMaxBreakPoint
-                  font-size: 30px
-                  line-height: 41px
-              .description
-                font-family: 'Avenir'
-                font-style: normal
-                font-weight: 500
-                font-size: 20px
-                line-height: 27px
-                letter-spacing: -0.022em
-                color: $black
-
-                +smMaxBreakPoint
-                  font-size: 16px
-                  line-height: 22px
-                  letter-spacing: -0.011em
+  .product-categories-content
+    height: 100%
+    h2
+      text-align: left
+      font-family: 'Avenir'
+      font-style: normal
+      font-weight: 900
+      font-size: 48px
+      line-height: 66px
+      +smMaxBreakPoint
+        font-size: 36px
+        line-height: 49px
+        color: #847FFB
