--- a/new-space-systems/src/components/productCategories copy/categoriesCarouselMobile/_categoriesCarouselMobile.sass
+++ b/new-space-systems/src/components/productCategories copy/categoriesCarouselMobile/_categoriesCarouselMobile.sass
@@ -2,21 +2,17 @@
     +flex(column)
     gap: 30px
     width: 100%
+    height: 606px
     .carousel-root
         width: 100%
         .slider
             .category
-                +container(295px, 0, $blue, 5px)
                 margin: 0 auto
-                +lgMaxBreakPoint
-                    margin-bottom: 46px
                 .picture-container
-                    height: 280px
+                    height: 400px
                     overflow: hidden
-                    +lgMaxBreakPoint
-                        height: 217px
                     div.picture
-                        +bg-image(280px, 295px, '../../../assets/category.webp', cover)
+                        +bg-image(280px, 295px, '../../assets/category.webp', cover)
                         +lgMaxBreakPoint
                             height: 217px
                 .name
@@ -30,7 +26,7 @@
                         line-height: 90px
         .arrow
             +center
-            +bg-image(35px, 35px, '../../../assets/Arrows-black.svg')
+            +bg-image(35px, 35px, '../../assets/Arrows-black.svg')
             z-index: 2
             transform: translateX(0)
             +lgMaxBreakPoint
