--- a/new-space-systems/src/components/testimonials/testimonials.sass
+++ b/new-space-systems/src/components/testimonials/testimonials.sass
@@ -5,7 +5,7 @@
   width: 100%
   padding: 90px 0
   +smMaxBreakPoint
-    padding: 0
+    padding-top: 0
   h2
     margin-left: 100px
     font-family: 'Avenir'
