--- a/new-space-systems/src/components/testimonials/testimonials.sass
+++ b/new-space-systems/src/components/testimonials/testimonials.sass
@@ -1,5 +1,5 @@
 @import '../../styles/_mixins'
-
+@import '../productCarousel/categoriesCarouselMobile/_categoriesCarouselMobile'
 .testimonials
   height: 920px
   width: 100%
@@ -23,7 +23,7 @@
       letter-spacing: -0.011em
   .BrainhubCarousel__container
     width: 100%
-    height: 700px
+    height: 660px
     .BrainhubCarousel
       width: 100%
       height: 100%
@@ -53,22 +53,23 @@
           flex-gap: 24px
           .BrainhubCarouselItem
             width: 510px
-            height: 696.5px
+            height: 656.5px
             border: 1px solid #BBBBBB
             border-radius: 10px
             background-color: #fff
             margin-right: 20px
             display: block
-            .testimonial
-              height: 696.5px
+            .category
+              height: 656.5px
               .picture-container
                 border-radius: 10px 10px 0 0
-                width: 365px
-                height: 365px
+                width: 100%
+                height: 325px
                 overflow: hidden
                 position: relative
                 +smMaxBreakPoint
-                  width: 325px
+                  width: 100%
+                  height: auto
                 img
                   width: 100%
                   height: auto
@@ -76,22 +77,16 @@
                   top: 50%
                   left: 50%
                   transform: translate(-50%,-50%)
-                  +smMaxBreakPoint
-                  height: 100%
-                  width: auto
-
               .bottom-section
                 box-sizing: border-box
                 padding: 40px 20px 20px
                 text-align: left
                 border-radius: 0 0 10px 10px
-                width: 365px
-                height: 331px
+                flex-grow: 1
                 display: flex
                 flex-direction: column
                 justify-content: space-between
-                +smMaxBreakPoint
-                  width: 325px
+                height: 332px
                 .description
                   width: 100%
                   font-family: 'Avenir'
@@ -118,3 +113,62 @@
                   line-height: 22px
                   letter-spacing: -0.022em
                   color: $black
+
+  .categories-carousel-container
+    height: auto
+    .carousel-root
+      height: auto
+      .slider
+        height: auto
+        .slide
+          height: 698px
+          .category
+            margin: 24px
+            width: calc(100% - 48px)
+            height: 672px
+            .picture-container
+              width: 100%
+              height: 340px
+              background-color: #fff
+              img
+                width: 100%
+                height: auto
+            .bottom-section
+              box-sizing: border-box
+              padding: 40px 20px 20px
+              text-align: left
+              border-radius: 0 0 10px 10px
+              height: 331px
+              display: flex
+              flex-direction: column
+              justify-content: space-between
+              +smMaxBreakPoint
+                width: auto
+                height: 340px
+              .description
+                font-family: 'Avenir'
+                font-style: normal
+                font-weight: 500
+                font-size: 24px
+                line-height: 33px
+                letter-spacing: -0.022em
+                color: $black
+                +smMaxBreakPoint
+                  border-bottom: 60px
+              .author
+                font-family: 'Avenir'
+                font-style: normal
+                font-weight: 500
+                font-size: 16px
+                line-height: 22px
+                letter-spacing: -0.022em
+                text-decoration-line: underline
+                color: $black
+              .ocupation
+                font-family: 'Avenir'
+                font-style: normal
+                font-weight: 300
+                font-size: 16px
+                line-height: 22px
+                letter-spacing: -0.022em
+                color: $black
